# rust-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
findings/arith_mismatch/: a.out  base  base.rs  reduce  reduce-gccrs.rs  reduce.c  reduce.rs  reduce_cmd.txt
findings/creduce/reduce_mrustc_arith/0_mismatch/: base.rs  base.rs.orig  statistics.txt
findings/creduce/reduce_mrustc_arith/3/: a.out  base  base-gccrs.rs  base-manual  base-manual.rs  base.c  base.rs  base.rs.orig  base_cmd.txt  base_manual  base_manual.c  base_manual_cmd.txt  mrustc_out  mrustc_out.c  mrustc_out_cmd.txt  output_2.c  policy.txt  script.sh  statistics.txt
findings/creduce/reduce_mrustc_arith/6_mismatch/: base.rs  base.rs.orig  base2  base2.c  base2_cmd.txt  output_1  output_2.c  output_2_cmd.txt  policy.txt  script.sh  statistics.txt
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/: script.sh
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/10/: base-manual.rs  base.rs  base.rs.orig  output_1  output_2  output_2.c  statistics.txt
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/15/: base-manual.rs  base.rs.orig  output_1  output_2  output_2.c  script-manual.sh  statistics.txt
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/5/: base-manual.rs  base.rs  base.rs.orig  output_1  output_2  output_2.c  script-manual.sh  statistics.txt
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/6/: base-manual.rs  base.rs  base.rs.orig  output_1  output_2  output_2.c  statistics.txt
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/8/: base.rs  base.rs.orig  statistics.txt
findings/creduce/reduce_mrustc_arith2/fail/differing_checksum_error/9/: base.rs  base.rs.orig  statistics.txt
findings/creduce/reduce_ownership/: input.txt  ownership-reduce.rs  ownership.rs  ownership.rs.orig  script.sh  statistics.txt
findings/creduce/reduce_ownership/try2/: ownership-reduce.rs  ownership.rs  ownership.rs.orig  script.sh  statistics.txt
findings/creduce/reduce_ownership_2/: a.out  input.txt  run_874.rs  run_874.rs.orig  run_874_manual  run_874_manual.c  run_874_manual.rs  run_874_manual_cmd.txt  script.sh
findings/differing_checksum/: 9272229858377930718_default.rs
findings/massive_memory_use/compilation_error/777/: base_no_checksum  base_no_checksum.rs  statistics.txt
findings/optimization_error/run_error/: base-manual.rs  base.rs  base.rs.orig  info  output_1  output_2  script-manual.sh  script.sh
findings/optimization_error/run_error_2/: base-manual.rs  base.rs  output_1  output_2
migrations/2022-06-03-181048_create_db/: up.sql
rust-gen/: Cargo.toml
rust-gen-cloud/: .env  .env.example  Cargo.toml  build.rs
rust-gen-cloud/migrations/2022-06-03-181048_create_db/: down.sql  up.sql
rust-gen-cloud/queries/: grouped_optimization_time.sql  grouped_subrun_differing_checksum_errors.sql  grouped_subrun_differing_checksum_errors_by_compiler.sql  grouped_subrun_errors.sql  grouped_subrun_errors_by_compiler.sql  grouped_subrun_time.sql  grouped_version_time.sql  run_info.sql  total_runs.sql  unique_hosts.sql
rust-gen-cloud/src/: main.rs  model.rs  schema.rs
rust-gen-cloud/src/model/: mod.rs  policy.rs  run.rs  statistic.rs  statistic_map.rs  sub_run.rs
rust-gen-cluster/: .env.example  Cargo.toml
rust-gen-cluster/src/: main.rs
rust-gen-generate/: Cargo.toml
rust-gen-generate/src/: main.rs
rust-gen-installer/: Cargo.toml
rust-gen-installer/src/: main.rs
rust-gen-runner/: Cargo.toml
rust-gen-runner/src/: main.rs
rust-gen/src/: context.rs  distribution.rs  generator.rs  lib.rs  policy.rs  statistics.rs  statistics_old.rs  utils.rs
rust-gen/src/ast/: eval_expr.rs  expr.rs  file.rs  function.rs  item.rs  mod.rs  op.rs  stmt.rs  ty.rs
rust-gen/src/generate/: eval_expr.rs  expr.rs  file.rs  function.rs  item.rs  mod.rs  stmt.rs  ty.rs  utils.rs
rust-gen/src/runtime/: config.rs  error.rs  mod.rs  run.rs
rust-gen/src/statistics/: generation.rs  map.rs  mod.rs  program.rs
rust-gen/src/symbol_table/: expr.rs  mod.rs  tracked_ty.rs  ty.rs
rust-gen/src/visitor/: assert_gen_visitor.rs  base_visitor.rs  checksum_eval_visitor.rs  checksum_gen_visitor.rs  emit_visitor.rs  expr_visitor.rs  mod.rs  statistics_visitor.rs  validation_gen_visitor.rs
rust-gen/src/wrapping/: mod.rs
rust-gen/tests/: move.rs
scripts/: debug.sh  diff_test.sh
src/: context.rs  distribution.rs  generator.rs  lib.rs  main.rs  policy.rs  schema.rs  statistic.rs  statistics.rs  utils.rs
src/ast/: eval_expr.rs  expr.rs  file.rs  function.rs  item.rs  mod.rs  op.rs  stmt.rs  ty.rs  utils.rs
src/runtime/: config.rs  error.rs  output.rs  run.rs
src/symbol_table/: expr.rs  tracked_ty.rs  ty.rs
src/visitor/: base_visitor.rs  checksum_eval_visitor.rs  checksum_gen_visitor.rs  emit_visitor.rs  expr_visitor.rs  mod.rs  visitor.rs
tests/: move.rs  partial_move.rs
