[package]
name = "rust-gen-cloud"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-gen = { path="../rust-gen" }
diesel = { version = "1.4.8", features = ["mysql", "64-column-tables", "chrono", "numeric"] }
bigdecimal = "0.1.2"
num-bigint = "0.2.6"

rand = "0.8.0"
dotenv = "0.15.0"
sha2 = "0.10.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1.8", features = ["derive"] }

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
