[package]
name = "rust-gen-runner"
version = "0.2.0"
edition = "2021"

[dependencies]
rust-gen = { path="../rust-gen" }
clap = { version = "3.1.8", features = ["derive"] }
indicatif = "0.16.2"
rand = "0.8.5"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
