[package]
name = "rust-gen"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
num-traits = "0.2.14"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
ron = "0.7.0"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
