[package]
name = "rust-gen"
version = "0.3.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
num-traits = "0.2.14"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
ron = { git = "https://github.com/ron-rs/ron.git", rev = "366c1d8" }
derive_builder = "0.11.2"
rpds = "0.11.0"
archery = "0.4.0"
